@@ -90,20 +90,6 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
-  * core: Add NoDecode option to AllowEncodedSlashes to turn off decoding
-    of encoded slashes in path info.  (This is already the behavior of
-    AllowEncodedSlashes On in trunk.)
-      Trunk patch: http://svn.apache.org/viewvc?view=revision&revision=1082196
-      Backport version for 2.2.x of patch:
-         http://people.apache.org/~poirier/AllowEncodedSlashes.22.patch
-      +1 poirier, jim, covener
-      +.1 wrowe; this essentially causes "%2F" -> "%2F" -> "%252F" to any backend,
-                 as mentioned previously trunk is broken and decoding to 'something'
-                 is necessary for routing such.  %2F cannot be distinguished from
-                 %252F on the front end, adding risks.  All this said, not against 
-                 an optional broken feature if this warning is placed in the docs.
-                 Non-optional broken features are worse :)
-                 Trunk must be patched identically.
 
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ New proposals should be added at the end of the list ]
