@@ -1589,7 +1589,7 @@ AP_DECLARE(int) ap_unescape_url(char *url)
         return OK;
 }
 
-AP_DECLARE(int) ap_unescape_url_keep2f(char *url)
+AP_DECLARE(int) ap_unescape_url_keep2f(char *url, int decode_2f)
 {
     register int badesc, badpath;
     char *x, *y;
@@ -1616,6 +1616,10 @@ AP_DECLARE(int) ap_unescape_url_keep2f(char *url)
                 decoded = x2c(y + 1);
                 if (decoded == '\0') {
                     badpath = 1;
+                }
+                else if (IS_SLASH(decoded) && !decode_2f) {
+                    /* do not decode, just let it go by as-is */
+                    *x = *y;
                 }
                 else {
                     *x = decoded;
